--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Snigdha Reddy Pulim\n",
+    "UID: U13354202\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -172,7 +172,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    " Git is a version control system. \n",
+    " GitHub is a cloud-based hosting service."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +187,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git clone"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +201,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Fork"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,7 +215,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,7 +229,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git add\n",
+    "\n",
+    "git commit \n",
+    "\n",
+    "git push"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,7 +247,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git pull"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -244,7 +261,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "when two separate branches have made edits to the same line in a file, or when a file has been deleted in one branch but edited in the other conflicts occur. \n",
+    "\n",
+    "Check the conflicts and select the right edit/delete."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,18 +294,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
