--- a/worksheets/worksheet_00.ipynb
+++ b/worksheets/worksheet_00.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 00\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Snigdha Reddy Pulim\n",
+    "UID: U13354202\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -23,7 +23,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I am looking for more professional experience and also because a Spark project is part of the coursework."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +37,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To be more proactive and to focus more on soft skills required for the industry."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +51,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I took ML and AI courses in my undergrad (4 years ago) and in the previous semister I took the User-centric Systems for Data Science (CS 599 L1) course, but I do not have any pactical experience for the same."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I need to brush up all the mathematical concepts, especially statistics; therefore, might struggle with statistics"
+   ]
   },
   {
    "attachments": {},
@@ -73,35 +81,6 @@
     "#### Lambda functions\n",
     "\n",
     "Python supports the creation of anonymous functions (i.e. functions that are not bound to a name) at runtime, using a construct called `lambda`. Instead of writing a named function as such:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def f(x):\n",
-    "    return x**2\n",
-    "f(8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One can write an anonymous function as such:"
    ]
   },
   {
@@ -121,6 +100,35 @@
     }
    ],
    "source": [
+    "def f(x):\n",
+    "    return x**2\n",
+    "f(8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can write an anonymous function as such:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "(lambda x: x**2)(8)"
    ]
   },
@@ -129,33 +137,6 @@
    "metadata": {},
    "source": [
     "A `lambda` function can take multiple arguments:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(lambda x, y : x + y)(2, 3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The arguments can be `lambda` functions themselves:"
    ]
   },
   {
@@ -175,6 +156,33 @@
     }
    ],
    "source": [
+    "(lambda x, y : x + y)(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The arguments can be `lambda` functions themselves:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "(lambda x : x(3))(lambda y: 2 + y)"
    ]
   },
@@ -187,10 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(lambda x,y,z: True if x<y and y<z else None)(5,4,2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,10 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda n:(lambda n:n*n)(n))(3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -249,18 +272,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[6, 6, 6, 6, 6]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 6, 6, 6, 6]\n"
+     ]
     }
    ],
    "source": [
@@ -268,7 +288,7 @@
     "b = [5, 4, 3, 2, 1]\n",
     "\n",
     "a_plus_b = map(lambda x, y: x + y, a, b)\n",
-    "list(a_plus_b)"
+    "print(list(a_plus_b))"
    ]
   },
   {
@@ -280,13 +300,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, False, False, True, True]\n"
+     ]
+    }
+   ],
    "source": [
     "c = [-2, -1, 0, 1, 2]\n",
-    "gt_zero = map()\n",
-    "list(gt_zero)"
+    "gt_zero = map(lambda x: True if x>0 else False,c)\n",
+    "print(list(gt_zero))"
    ]
   },
   {
@@ -298,13 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, True, True, False, False]\n"
+     ]
+    }
+   ],
    "source": [
     "d = [1, 3, 6, 11, 2]\n",
-    "mul_of3 = map()\n",
-    "list(mul_of3)"
+    "mul_of3 = map(lambda x: True if x%3==0 else False,d)\n",
+    "print(list(mul_of3))"
    ]
   },
   {
@@ -320,13 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "e = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "evens = filter()\n",
-    "list(evens)"
+    "evens = filter(lambda x:x%2==0,e)\n",
+    "print(list(evens))"
    ]
   },
   {
@@ -342,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -383,12 +427,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3628800\n"
+     ]
+    }
+   ],
    "source": [
-    "factorial = lambda x : reduce()\n",
-    "factorial(10)"
+    "from functools import reduce\n",
+    "\n",
+    "factorial = lambda x : reduce(lambda fac,x:fac*x,range(1,x+1),1)\n",
+    "print(factorial(10))"
    ]
   },
   {
@@ -401,11 +455,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "sieve = lambda x : reduce()\n",
+    "from functools import reduce\n",
+    "\n",
+    "\n",
+    "def isprime(a):\n",
+    "    for i in range(2,a):\n",
+    "        if a%i == 0:\n",
+    "          return False\n",
+    "    return True\n",
+    "\n",
+    "sieve = lambda x : reduce(lambda n,m:print(m),filter(lambda y: isprime(y), range(1,x+1)),[])\n",
+    "\n",
     "print(sieve(100))"
    ]
   },
@@ -423,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -452,11 +550,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "because myBank.is_overdrawn is not calling the is_overdrawn method [() is absent]. It is true because the Bank class has a method of the name is_overdrawn."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -479,11 +579,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "For each iteration, i is assigned a value in the range. Therefore, although i is changed to 10, at the beginning of the next iteration, it is updated to the next value in the range.\n",
+    "\n",
+    "It is a temporary local variable."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -506,11 +610,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Board[0][0] is updating the 0th position of the array variable row (which is at Board[0]).\n",
+    "And, Board is an array of the variable row repeating 3 times (row is also at Board[1] and Board[2])."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -539,11 +646,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "in the results array, only the return values are stored. Hence [0,1,2].\n",
+    "in the funcs array, we are storing the function as is, so x remains a variable of the function. upon calling the funcs, the last known value of x is returned. which is 2. Hence [2,2,2]."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -571,15 +681,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "because both the times the file is opened in writing mode (\"w+\"). The second time it is opened, the old text is overwritten."
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -593,9 +702,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
