--- a/worksheets/worksheet_01.ipynb
+++ b/worksheets/worksheet_01.ipynb
@@ -262,9 +262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "when two separate branches have made edits to the same line in a file, or when a file has been deleted in one branch but edited in the other conflicts occur. \n",
     "\n",
-    "Check the conflicts and select the right edit/delete."
+    "1) Version history maybe different on the repos/branches\n",
+    "\n",
+    "    git rebase to change the base of the branch\n",
+    "\n",
+    "2) when two separate branches have made edits to the same line in a file, or when a file has been deleted in one branch but edited in the other conflicts occur. "
    ]
   },
   {
@@ -277,7 +280,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1) Fork class repository to personal git repository\n",
+    "\n",
+    "2) Clone it to local system\n",
+    "\n",
+    "3) Make a new branch and make changes as required\n",
+    "\n",
+    "4) Push it back to personal repository\n",
+    "\n",
+    "5) Click the Compare & pull request button\n",
+    "\n",
+    "6) Click Create pull request"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,7 +304,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "git rebase\n",
+    "\n",
+    "git log\n",
+    "\n",
+    "git status\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
