lab-1 and worksheet_2

--- a/notes/worksheet_02_snigdha.ipynb
+++ b/notes/worksheet_02_snigdha.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 02\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Snigdha Reddy Pulim \n",
+    "UID: U13354202\n",
     "\n",
     "### Topics\n",
     "\n",
