--- a/notes/worksheet_03_snigdha.ipynb
+++ b/notes/worksheet_03_snigdha.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 03\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Snigdha Reddy Pulim\n",
+    "UID: U13354202\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -26,7 +26,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "-> Should explain the outcome\n",
+    "\n",
+    "-> An explanation about the relationship between data populations that is interpreted probabilistically (source:https://machinelearningmastery.com/what-is-a-hypothesis-in-machine-learning/#:~:text=A%20statistical%20hypothesis%20is%20an,for%20mapping%20inputs%20to%20outputs.)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +42,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "C. (1, 2, 3)\n",
+    "\n",
+    "-> to validate the hypothesis (x,x+2,x+4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +58,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A. (100, 102, 104)\n",
+    "\n",
+    "B. (5, 7, 9)\n",
+    "\n",
+    "C. (1, 2, 3)\n",
+    "\n",
+    "chosen C. (1,2,3) to validate hypothesis (x,x+2,x+4) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +82,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- positive\n",
+    "- negative\n",
+    "- negative"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,7 +98,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "● (2, 4, 3)\n",
+    "\n",
+    "● (6, 8, 10)\n",
+    "\n",
+    "● (1, 3, 5)\n",
+    "\n",
+    "chosen (2,4,3) because the hypothesis(x,x+2,x+4) could be a subset of the rule (to avoid Confirmation Bias)"
+   ]
   },
   {
    "attachments": {},
@@ -91,7 +119,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As given in the slides (simplified)\n",
+    "\n",
+    "1) Process Data\n",
+    "\n",
+    "2) Explore Data\n",
+    "\n",
+    "3) Extract Features\n",
+    "\n",
+    "4) Create Model"
+   ]
   },
   {
    "attachments": {},
@@ -109,7 +147,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- record : name and phone number\n",
+    "- graph : on Facebook users, videos, links, etc are nodes and the relationship between these nodes is represented on edges\n",
+    "- image : scanned documents\n",
+    "- text : text entered in chatGPT"
+   ]
   },
   {
    "attachments": {},
@@ -122,7 +165,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "-> Recommender systems : Netflix, YouTube, Amazon, etc."
+   ]
   },
   {
    "attachments": {},
@@ -135,12 +180,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "-> Risk assessment :  drilling in mining, \n",
+    "\n",
+    "-> Image Recognition : catching catfish accounts, facial recognition"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -154,12 +203,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
